--- a/metadata.yaml
+++ b/metadata.yaml
@@ -24,6 +24,7 @@ subjects:
 - !lcc 'PZ'
 - !lcsh 'Christian life -- Juvenile fiction'
 - !lcsh 'Temperance -- Juvenile fiction'
+- GITenberg
 title: 'Frank Oldfield
 
   Lost and Found'
